# simulations

./: .gitignore  README.md  STATE.md  pyproject.toml
examples/scenarios/: basic.json
mechanism-design/: .gitignore  MANIPULATION.md
mechanism-design/arbitration-game/: ARBITRATION.md  agents.py  game.py  report.py  s1_stall_delay.py  s2_endogeneity.py  s3_spam_capital.py  s4_watchers.py
mechanism-design/atlas/: index.html  jax-dcfr.html
mechanism-design/batch-amm/: .gitignore  BATCH.md  MULTI.md  pyproject.toml  run_multi.py
mechanism-design/batch-amm/results/: cfr_batch.json  core.json  disclosure.json  disclosure_manip.json  limits_core.json  limits_jam.json  limits_manip.json  manip.json  multi.json  multi_pilot.json  seats.json
mechanism-design/batch-amm/scripts/: cfr_batch.py  run_disclosure.py  run_limits.py  run_sweeps.py
mechanism-design/batch-amm/src/batch_amm/: __init__.py  clearing.py  engine.py  envs.py  lmsr_np.py  metrics.py  multi_market.py
mechanism-design/batch-amm/tests/: test_clearing.py  test_disclosure.py  test_envs.py  test_limit_clearing.py  test_multi_market.py
mechanism-design/evolution/: EVOLUTION.md
mechanism-design/galanis-market/: .gitignore  README.md  pyproject.toml
mechanism-design/galanis-market/results/: README.md  cfr_a11_i50_t3s111y2+t3s110+t3s111+t3s111o2ye2_r3.json  cfr_a11_i50_t3s111y2+t3s110+t3s111+t3s111o2ye2_r3.txt  entry_sweep_BASE-2.json  entry_sweep_BASE-2_T1_twap.json  entry_sweep_REPL_T3_twap.json  entry_sweep_T1.json  entry_sweep_T2.json  entry_sweep_T2_twap.json  entry_sweep_T3.json  equilibria.md  index.html  manipulator_sweep_t3s111y2.json  player_types_t3s111y2.json  t2u_first_q0.25_0.5.json  t2u_last_q0.25_0.5.json
mechanism-design/galanis-market/scripts/: entry_sweep.py  manipulator_sweep.py  mccfr_sweep.py  phase2_summary.py  player_type_sweep.py  solve_all.py  t2u_sweep.py  write_equilibria_doc.py
mechanism-design/galanis-market/src/galanis_market/: __init__.py  galanis_empirics.py  game.py  lmsr.py  myopic.py  solve.py  structures.py
mechanism-design/galanis-market/tests/: test_game.py  test_lmsr.py  test_myopic.py  test_solve.py  test_structures.py
mechanism-design/hanson-conditional/: .gitignore  pyproject.toml
mechanism-design/hanson-conditional/results/: hanson_manipulator_sweep.json
mechanism-design/hanson-conditional/scripts/: manipulator_sweep.py  mccfr_sweep.py  player_type_sweep.py  solve_all.py
mechanism-design/hanson-conditional/src/hanson_conditional/: __init__.py  game.py  solve.py
mechanism-design/hanson-conditional/tests/: test_game.py
mechanism-design/jax-futarchy/: README.md  pyproject.toml
mechanism-design/jax-futarchy/scripts/: canonical_run.py
mechanism-design/jax-futarchy/src/jax_futarchy/: __init__.py  dcfr.py  dcfr_canonical.py  dcfr_hanson.py  game.py  hanson_game.py  lmsr.py  networks.py
mechanism-design/jax-futarchy/src/jax_futarchy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mechanism-design/kyle-batch/: KYLE.md  pyproject.toml
mechanism-design/kyle-batch/results/: amm.json  arrival.json  baseline.json  corruption.json  entry.json  frontier.json  subsidy.json  twap.json  twap_windowed.json
mechanism-design/kyle-batch/scripts/: make_plots.py  run_arrival.py  run_subsidy.py  run_sweeps.py  run_windowed.py
mechanism-design/kyle-batch/src/kyle_batch/: __init__.py  arrival.py  closed_forms.py  decision.py  mc.py  onebatch.py  twap.py
mechanism-design/kyle-batch/tests/: test_arrival.py  test_baseline.py  test_corruption.py  test_subsidy.py  test_twap_amm.py  test_windowed.py
mechanism-design/metadao-cfmm/: .gitignore  pyproject.toml
mechanism-design/metadao-cfmm/results/: metadao_manipulator_sweep.json
mechanism-design/metadao-cfmm/scripts/: manipulator_sweep.py  mccfr_sweep.py
mechanism-design/metadao-cfmm/src/metadao_cfmm/: __init__.py  cfmm.py  game.py  solve.py
mechanism-design/metadao-cfmm/tests/: test_cfmm.py  test_game.py
mechanism-design/proposal-evaluation/: MODEL.md
mechanism-design/proposal-poker/: S5-SUBSIDY.md  results-s5-subsidy.json  s5_subsidy.py  sim.py
mechanism-design/proposal-poker-tabular/: pyproject.toml
mechanism-design/proposal-poker-tabular/src/proposal_poker_tabular/: __init__.py  game.py
mechanism-design/proposal-poker-tabular/src/proposal_poker_tabular.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mechanism-design/proposal-poker-tabular/tests/: test_game.py
mechanism-design/results-site/: manipulation.html
proposal-evaluation/: MODEL.md
results/llm-decision-market/: RESULTS.md  arm_a_report.json  arm_b_merged_report.json  arm_b_shard0_report.json  arm_b_shard1_report.json  arm_b_shard2_report.json  arm_b_shard3_report.json  arm_b_shard4_report.json  arm_b_shard5_report.json  (+56 more)
tests/: test_accounting.py  test_cli_smoke.py  test_deterministic_env.py  test_discovery.py  test_example_agent.py  test_scenario_validation.py  test_seeded_regression.py  test_stochastic_invariants.py
(+350 files in other folders)
