[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-amm"
version = "0.1.0"
description = "Quantitative comparison of batch-cleared vs sequential trading against an AMM in small decision markets (myopic-Bayes traders; LMSR and linear/Kyle market makers)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
