[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "galanis-market"
version = "0.1.0"
description = "OpenSpiel formulation of the Galanis (2026) prediction-market game with LMSR pricing, used to derive Bayes-Nash equilibria via tabular CFR+."
requires-python = ">=3.9"
dependencies = [
    "open_spiel>=1.6",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-xdist"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
