[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hanson-conditional"
version = "0.1.0"
description = "OpenSpiel formulation of Hanson outcome-conditional prediction markets for futarchy decision-making."
requires-python = ">=3.9"
dependencies = [
    "open_spiel>=1.6",
    "numpy>=1.24",
    # Imports galanis_market.lmsr for shared LMSR pricing primitives.
    # Install galanis-market editable into the same env first.
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
