[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-futarchy"
version = "0.1.0"
description = "JAX-native implementation of futarchy mechanisms with Deep CFR for large game spaces."
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.30",
    "flax>=0.8",
    "optax>=0.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
