[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kyle-batch"
version = "0.1.0"
description = "Analytic + numerical theory of corruption in Kyle-style simultaneous batch decision markets (linear-Gaussian, outcome-settled, probabilistic implementation)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
