[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "proposal-poker-tabular"
version = "0.1.0"
description = "Minimal OpenSpiel encoding of the binary-staking subset of Proposal Poker (proposal-evaluation/MODEL.md)."
requires-python = ">=3.9"
dependencies = [
    "open_spiel>=1.6",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
